fix: Removed horizontal scroll

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,8 @@ html, body {
 	font-size: 100%;
 }
 
-body {
+#__next {
+	width: 100vw;
 	overflow-x: hidden!important;
 }
 
